[package]
name = "criteox"
version = "0.1.0"
authors = ["Koji Matsumoto <otomustam.ijok@gmail.com>"]
edition = "2018"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }
tokio = { version = "1", features = ["full"] }
chrono = "0.4"
